0.2.3
 - enh: reduce memory usage and computation time by padding
   slice-wise (#7)
0.2.2
 - docs: minor update and add changelog
0.2.1
 - fix: Allow sinogram data type other than complex128
 - docs: Add example with experimental data (#3)
 - ci: automated deployment with travis-ci
0.2.0
 - BREAKING CHANGES:
   - Dropped support for Python 2
   - Renamed `sum_2d` to `integrate_2d`
 - Refactoring (#4, #5):
   - Moved each reconstruction algorithm to a separate file
   - Modified code to comply with PEP8
   - Moved long doc strings from source to docs directory
   - Migrate from unwrap to scikit-image
   - Cleaned up example scripts
 - Bugfixes:
   - Mistake in "negative-modulo" method for determination of
     2PI sinogram phase offsets
0.1.8
 - Updated documentation
 - Cleaned up examples
0.1.7
 - Move documentation from GitHub to readthedocs.io
 - Add universal wheel on PyPI
 - Update tests on travis with new versions of NumPy
0.1.6
 - Bugfixes:
  - size of reconstruction volume in z too large for cases where
    the y-size is larger than the x-size of the sinogram images
  - `backpropagate_3d_tilted` used wrong shape of projections
  - 3D backpropagation methods did not use power-of-two padding size
0.1.5
 - Code optimization (speed, memory) with numexpr
 - New keyword argument `save_memory` for 3D reconstruction
   on machines with limited memory
 - New keyword argument `copy` for 3D reconstruction to protect
   input sinogram data.
0.1.4
 - The exponential term containing the distance between center
   of rotation and detector `lD` is now multiplied with
   the factor `M-1` instead of `M`. This is necessary,
   because usually the scattered wave is normalized in both
   amplitude and phase (`u_0`) and not only amplitude `a_0`
 - Allow angles of shape (A,1) in `backpropagate_3d_tilted` 
 - Set default value lD=0 for all reconstruction algorithms
 - Improvement of documentation
0.1.3
 - Fixes for `backpropagate_3d_tilted` when `angles` are